[package]
name = "my-first-rust"
version = "0.1.0"
edition = "2021"
description = "web assembly test project"
license-file = "LICENSE"
repository = "https://github.com/moorscode/rust-wasm-discovery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "pkg"

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
rgb = "0.8"
console_error_panic_hook = "0.1.7"
chrono = "0.4.22"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
    "MouseEvent",
    "KeyboardEvent",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
]
